--- a/vanilla/layout.ejs
+++ b/vanilla/layout.ejs
@@ -10,9 +10,7 @@
     <div class="container-fluid bg-primary">
         <h2 class="text-white">Vanilla JS Демо</h2>
     </div>
-    <div class="col-lg-offset-1">
-        <h3>{UserName}</h3>
-        <div>ID: {Id}</div>
-    </div>
+
+    <%- include('pages/' + page) -%>
 </body>
 </html>
