Renaming view folders

--- a/vanilla/views/layout.ejs
+++ b/vanilla/views/layout.ejs
@@ -10,7 +10,7 @@
     <div class="container-fluid bg-primary">
         <h2 class="text-white">Vanilla JS Демо</h2>
     </div>
-
-    <%- include('pages/' + page) -%>
+    <%- include('mainContent/' + page) %>
+    
 </body>
 </html>
