--- a/vanilla/views/mainContent/register.ejs
+++ b/vanilla/views/mainContent/register.ejs
@@ -3,15 +3,15 @@
     <form method="post" action="register">
         <div class="form-group">
             <label for="username">Имя:</label>
-            <input type="text" class="form-control" id="username">
+            <input type="text" class="form-control" name="username" id="username">
         </div>
         <div class="form-group">
             <label for="password">Пароль:</label>
-            <input type="password" class="form-control" id="password">
+            <input type="password" class="form-control" name="password" id="password">
         </div>
         <div class="form-group">
             <label for="confirmPassword">Повторить пароль:</label>
-            <input type="password" class="form-control" id="confirmPassword">
+            <input type="password" class="form-control" name="confirmPassword" id="confirmPassword">
         </div>
         <button type="submit" class="btn btn-primary">Отправить</button>
     </form>
