--- a/vanilla/views/mainContent/register.ejs
+++ b/vanilla/views/mainContent/register.ejs
@@ -1,6 +1,6 @@
 <div class="col-lg-3 col-lg-offset-4">
     <h3>Регистрация</h3>
-    <form method="post" action="register">
+    <form id="registerForm" method="post" action="register">
         <div class="form-group">
             <label for="username">Имя:</label>
             <input type="text" class="form-control" name="username" id="username">
@@ -16,3 +16,46 @@
         <button type="submit" class="btn btn-primary">Отправить</button>
     </form>
 </div>
+
+<script>
+    window.addEventListener('load', () => {
+        var registerForm = document.getElementById('registerForm');
+
+        registerForm.addEventListener('submit', function (e) {
+            e.preventDefault();
+
+            var username = document.getElementById('username').value;
+            var password = document.getElementById('password').value;
+            var confirmPassword = document.getElementById('confirmPassword').value;
+
+            var json = JSON.stringify({
+                username: username,
+                password: password,
+                confirmPassword: confirmPassword
+            });
+
+            var xhr = new XMLHttpRequest();
+
+            xhr.open("POST", '/register', true)
+            xhr.setRequestHeader('Content-type', 'application/json; charset=utf-8');
+
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                    var result = JSON.parse(xhr.responseText);
+
+                    alert('Пользователь ' + result.username + ' успешно зарегистрирован.');
+
+                    window.location.href = 'login';
+                } else if (xhr.readyState === 4 && xhr.status === 400) {
+                    var result = JSON.parse(xhr.responseText);
+
+                    alert('Ошибка регистрации ' + result);
+                }
+            };
+
+            xhr.send(json);
+
+        }, false);
+        
+    }, false);
+</script>
