--- a/vanilla/views/layout.ejs
+++ b/vanilla/views/layout.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Фреймворки Демо</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="scripts/cookieApi.js"></script>
 </head>
 <body>
     <div class="container-fluid bg-primary">
