--- a/vanilla/views/mainContent/login.ejs
+++ b/vanilla/views/mainContent/login.ejs
@@ -1,14 +1,17 @@
 <div class="col-lg-3 col-lg-offset-4">
     <h3>Вход в систему</h3>
-    <form method="post" action="login">
+    <form id="loginForm" method="post" action="login">
         <div class="form-group">
             <label for="username">Имя:</label>
-            <input type="text" class="form-control" id="username">
+            <input type="text" class="form-control" id="username" name="username">
         </div>
         <div class="form-group">
             <label for="password">Пароль:</label>
-            <input type="password" class="form-control" id="password">
+            <input type="password" class="form-control" id="password" name="password">
         </div>
         <button type="submit" class="btn btn-primary">Войти</button>
+        <div id="validationErrors" class="alert alert-danger hidden"></div>
     </form>
 </div>
+
+<script src="scripts/postLoginData.js"></script>
