--- a/vanilla/views/mainContent/login.ejs
+++ b/vanilla/views/mainContent/login.ejs
@@ -10,6 +10,7 @@
             <input type="password" class="form-control" id="password" name="password">
         </div>
         <button type="submit" class="btn btn-primary">Войти</button>
+        <a class="btn btn-success" href="/register">Регистрация</a>
         <div id="validationErrors" class="alert alert-danger hidden"></div>
     </form>
 </div>
