--- a/vanilla/views/mainContent/register.ejs
+++ b/vanilla/views/mainContent/register.ejs
@@ -14,6 +14,7 @@
             <input type="password" class="form-control" name="confirmPassword" id="confirmPassword">
         </div>
         <button type="submit" class="btn btn-primary">Отправить</button>
+        <a class="btn btn-success" href="/login">Войти</a>
         <div id="validationErrors" class="alert alert-danger hidden"></div>
     </form>
 </div>
