--- a/vanilla/views/mainContent/profile.ejs
+++ b/vanilla/views/mainContent/profile.ejs
@@ -1,4 +1,4 @@
 <div class="col-lg-offset-1">
-    <h3>{UserName}</h3>
-    <div>ID: {Id}</div>
+    <h3><%= user.name %></h3>
+    <div>ID: <%= user.id %></div>
 </div>
