--- a/vanilla/views/mainContent/photos.ejs
+++ b/vanilla/views/mainContent/photos.ejs
@@ -1,3 +1,4 @@
-<div>
-    Здесь будет отображаться фотографии с пагинацией.
+<div id="photos">
 </div>
+
+<script src="scripts/photos.js"></script>
