base typescript like js version

--- a/typescript-with-no-fws/views/layout.ejs
+++ b/typescript-with-no-fws/views/layout.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Фреймворки Демо</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/views/styles.css">
 </head>
 <body>
     <div class="container-fluid bg-primary">
@@ -16,7 +17,7 @@
                 <input class="btn bth-success" type="submit" value="Выйти" />
             </form>
         <% } %>
-        <h2 class="text-white">Vanilla JS Демо</h2>
+        <h2 class="text-white">TypeScript Демо</h2>
     </div>
     
     <%- include('mainContent/' + page, {user}) %>
